# fmri2image_alignment

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
alignment/: alignment.py  build_dataset.py  project_source_to_target.py  utils.py
classification/: svm.py  utils.py
classification/reports/: ica_aligned.csv  ica_unaligned.csv  pca_aligned.csv  pca_unaligned.csv
data/NSD/: build_dataset.py  coco_image_fetcher.py  image_fetcher.py  mask_dataset.py  preprocess_alignment_data.py  utils.py
diffusion/: __init__.py  aligned_metric_eval.py  aligned_model.py  aligned_model_long.py  aligned_visual_eval.py  ddpm.py  ddpm_conditional.py  models_examples.py  modules.py  trainer_aligned_model.py  trainer_ddpm.py  trainer_unaligned_model.py  unaligned_metric_eval.py  unaligned_model.py  unaligned_model_long.py  unaligned_visual_eval.py  utils.py
feature_extraction/: build_dataset.py  extract_features.py  ica_aligned.py  ica_unaligned.py  pca_aligned.py  pca_ica_plot.py  pca_unaligned.py  plot_components.py  plot_pca_ica.py  umap_plot.py  utils.py
metrics/aligned_embeddings/: metrics.csv
metrics/unaligned_embeddings/: metrics.csv
plotting_utils/: inter_individual_diff.py  pca_ica_plot.py  umap_plot.py
